--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -30,7 +30,7 @@ html, body { margin: 0; padding: 0; min-height: 100%; -moz-user-select: none; -w
 #workstationSelectionDiv li:focus { margin: 4px; border: 1px solid #bbb; padding: 5px; cursor: text; background: white; box-sizing: border-box; color: black; }
 #workstationSelectionDiv input { width: calc(100% - 10px); box-sizing: border-box; padding: 5px; margin: 5px; }
 
-#workstationContextMenu, #boardContextMenu, #taskContextMenu, #userMenu { background: #eee; padding: 5px; position: fixed; min-width: 200px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); }
+#workstationContextMenu, #boardContextMenu, #taskContextMenu, #userMenu { background: #eee; padding: 5px; position: fixed; min-width: 200px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); z-index: 100; }
 #workstationContextMenu button, #workstationContextMenu label, #boardContextMenu button, #boardContextMenu label, #taskContextMenu button, #taskContextMenu label, #userMenu button, #userMenu label { display: block; width: 100%; background: none; border: none; padding: 8px; text-align: left; padding-left: 25px; border-radius: unset; transition: background-color 0.1s, color 0.1s; box-sizing: border-box; }
 #workstationContextMenu button:hover, #workstationContextMenu button:focus, #workstationContextMenu label:hover, #workstationContextMenu label:focus, #boardContextMenu button:hover, #boardContextMenu button:focus, #boardContextMenu label:hover, #boardContextMenu label:focus, #taskContextMenu button:hover, #taskContextMenu button:focus, #taskContextMenu label:hover, #taskContextMenu label:focus, #userMenu button:hover, #userMenu button:focus, #userMenu label:hover, #userMenu label:focus { background: #009688; color: white; }
 #workstationContextMenu button.selected, #workstationContextMenu label.selected, #boardContextMenu button.selected, #boardContextMenu label.selected, #taskContextMenu button.selected, #taskContextMenu label.selected, #userMenu button.selected, #userMenu label.selected { background: #ddd; /*color: white;*/ position: relative; color: black; /*&:hover::before {
@@ -58,6 +58,7 @@ html, body { margin: 0; padding: 0; min-height: 100%; -moz-user-select: none; -w
 #taskWorkstationSelect[hidden] { display: none; }
 
 #tasksDiv { margin: 15px; }
+#tasksDiv.importershown { margin-bottom: calc(50vh + 15px); }
 #tasksDiv .addtask { margin-bottom: 15px; }
 #tasksDiv ul { list-style: none; margin: 0; padding: 0; }
 #tasksDiv ul.Done li, #tasksDiv ul.Archived li { color: #00000066; background: #f9f9f9; }
@@ -78,6 +79,8 @@ html, body { margin: 0; padding: 0; min-height: 100%; -moz-user-select: none; -w
 #tasksDiv h3:hover { background: #e2e2e2; }
 #tasksDiv h3::after { display: inline-block; margin-left: 5px; font-size: 9px; content: '▼'; line-height: 18px; border: 1px solid #999; color: #666; text-align: center; border-radius: 12px; width: 20px; height: 20px; box-sizing: border-box; vertical-align: middle; }
 #tasksDiv h3.expanded::after { content: '▲'; }
+
+#importer + #tasksDiv { color: red; }
 
 #addTaskInput { padding: 10px 10px 10px 45px; min-width: 500px; margin-right: 7px; }
 
@@ -116,7 +119,7 @@ label:last-child span { border-radius: 0 6px 6px 0; }
 
 .default label { border-color: #bbb; }
 
-#importer { position: fixed; bottom: 0; left: 0; width: 100%; background: #ddd; padding: 20px; box-sizing: border-box; max-height: 50%; overflow-y: auto; }
+#importer { position: fixed; bottom: 0; left: 0; width: 100%; background: #ddd; padding: 20px; box-sizing: border-box; max-height: 50%; overflow-y: auto; z-index: 50; }
 #importer h2 { font-size: 1.2em; color: #666; font-weight: normal; margin: 0 0 10px; }
 #importer p { margin: 0; }
 #importer #dragHere { border: 2px dashed #999; padding: 40px; text-align: center; font-size: 1.4em; }
