* fixed selection on task status change

--- a/scss/hanging-todo.scss
+++ b/scss/hanging-todo.scss
@@ -160,7 +160,7 @@ html, body {
 	}
 }
 
-#workstationContextMenu, #boardContextMenu, #taskContextMenu, #userMenu {
+#workstationContextMenu, #boardContextMenu, #taskContextMenu, #userMenu, #statusContextMenu {
 	background: #eee;
 	padding: 5px;
 	position: fixed;
