--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -91,6 +91,8 @@ hr { margin: 5px 0; border: none; border-top: 1px solid #bbb; }
 
 button, .buttons li { border: 1px solid #666; padding: 5px 7px; border-radius: 5px; color: #666; background: none; transition: background-color 0.1s, color 0.1s; }
 button:hover, button:focus, .buttons li:hover, .buttons li:focus { background: #009688; color: white; border-color: #009688; }
+button.delete, .buttons li.delete { border-color: #BF3C25 !important; }
+button.delete:hover, .buttons li.delete:hover { background-color: #BF3C25 !important; }
 
 .buttons { list-style: none; margin: 0; padding: 0; }
 .buttons li { margin: 5px 0 0; padding: 10px 15px; }
@@ -101,24 +103,18 @@ input:focus { background: white; }
 
 input[type=checkbox] { min-width: unset; }
 
-label { margin: 0; padding: 2px 1px; display: inline-block; border-top: 2px solid #009688; border-bottom: 2px solid #009688; transition: border-color 0.2s; }
-label:first-child { padding-left: 2px; border-left: 2px solid #009688; border-radius: 8px 0 0 8px; }
-label:last-child { padding-right: 2px; border-right: 2px solid #009688; border-radius: 0 8px 8px 0; }
-
-input[type=radio] { display: none; /* -webkit-appearance: none; */ }
-
-label span { display: block; padding: 5px 12px; color: #009688; transition: background-color 0.1s, color 0.1s; }
-label span:hover { color: white; background: #009688; }
-
-input:checked + span { background: #009688; color: #fff; }
-input.default:checked + span { background: #bbb; }
-input.default + span:hover { background: #bbb; }
-
-label:first-child span { border-radius: 6px 0 0 6px; }
-
-label:last-child span { border-radius: 0 6px 6px 0; }
-
-.default label { border-color: #bbb; }
+.radios label { margin: 0; padding: 2px 1px; display: inline-block; border-top: 2px solid #009688; border-bottom: 2px solid #009688; transition: border-color 0.2s; }
+.radios label:first-child { padding-left: 2px; border-left: 2px solid #009688; border-radius: 8px 0 0 8px; }
+.radios label:last-child { padding-right: 2px; border-right: 2px solid #009688; border-radius: 0 8px 8px 0; }
+.radios input[type=radio] { display: none; /* -webkit-appearance: none; */ }
+.radios label span { display: block; padding: 5px 12px; color: #009688; transition: background-color 0.1s, color 0.1s; }
+.radios label span:hover { color: white; background: #009688; }
+.radios input:checked + span { background: #009688; color: #fff; }
+.radios input.default:checked + span { background: #bbb; }
+.radios input.default + span:hover { background: #bbb; }
+.radios label:first-child span { border-radius: 6px 0 0 6px; }
+.radios label:last-child span { border-radius: 0 6px 6px 0; }
+.radios.default label { border-color: #bbb; }
 
 #importer { position: fixed; bottom: 0; left: 0; width: 100%; background: #ddd; padding: 20px; box-sizing: border-box; max-height: 50%; overflow-y: auto; z-index: 50; }
 #importer h2 { font-size: 1.2em; color: #666; font-weight: normal; margin: 0 0 10px; }
@@ -127,5 +123,19 @@ label:last-child span { border-radius: 0 6px 6px 0; }
 #importer.active #dragHere { border-color: #009688; }
 
 #closeImporter { position: absolute; right: 20px; top: 20px; border: none; height: 32px; width: 32px; }
+
+#statusEdit { position: fixed; background: #00000088; top: 0; right: 0; bottom: 0; left: 0; z-index: 150; display: flex; overflow-y: auto; padding: 20px; }
+#statusEdit[hidden] { display: none; }
+#statusEdit > div { background: white; border-radius: 15px; padding: 35px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); margin: auto; }
+#statusEdit .radios { margin: 0 10px; display: inline-block; }
+#statusEdit .radios.hidden { visibility: hidden; }
+#statusEdit .drag { padding: 0; border: 1px solid #666; width: 32px; height: 32px; box-sizing: border-box; vertical-align: middle; margin: 0 10px 0 0; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; }
+#statusEdit ul { margin-bottom: 20px; }
+#statusEdit li button { margin-left: 20px; color: #666; }
+#statusEdit li button.delete { color: #BF3C25; }
+
+#cancelStatusEdit, #saveStatusEdit { border-radius: 10px; padding: 15px 20px; }
+
+#saveStatusEdit { float: right; }
 
 /*# sourceMappingURL=hanging-todo.css.map */
