--- a/scss/hanging-todo.scss
+++ b/scss/hanging-todo.scss
@@ -696,7 +696,8 @@ input[type=checkbox] {
 
 		&.disabled {
 			cursor: default;
-			border: none;	
+			border: none;
+			visibility: hidden;
 		}
 	}
 
