--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 html, body, input, button { font-family: sans-serif; font-size: 14px; }
 
-html, body { margin: 0; padding: 0; min-height: 100%; background: white; color: black; }
+html, body { margin: 0; padding: 0; min-height: 100%; background: white; color: black; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; }
 
 #loaderDiv { position: fixed; display: flex; background: white; color: black; width: 100%; height: 100%; align-items: center; place-content: center; }
 #loaderDiv[hidden] { display: none; }
@@ -61,10 +61,10 @@ html, body { margin: 0; padding: 0; min-height: 100%; background: white; color: 
 #tasksDiv.importershown { margin-bottom: calc(50vh + 15px); }
 #tasksDiv .addtask { margin-bottom: 15px; }
 #tasksDiv ul { list-style: none; margin: 0; padding: 0; }
-#tasksDiv ul.Done li, #tasksDiv ul.Archived li { color: #00000066; background: #f9f9f9; }
-#tasksDiv ul.Done li button, #tasksDiv ul.Archived li button { border-color: #00000033; color: black; }
-#tasksDiv ul.Cancelled li { color: #00000055; background: #fafafa; }
-#tasksDiv ul.Cancelled li button { border-color: #00000033; }
+#tasksDiv ul.done li { color: #00000066; background: #f9f9f9; }
+#tasksDiv ul.done li button { border-color: #00000033; color: black; }
+#tasksDiv ul.cancelled li { color: #00000055; background: #fafafa; }
+#tasksDiv ul.cancelled li button { border-color: #00000033; }
 #tasksDiv li { margin: 5px 0; padding: 5px; background: #f1f1f1; cursor: default; border-radius: 10px; transition: background-color 0.1s, color 0.1s; }
 #tasksDiv li:hover { background: #e2e2e2 !important; }
 #tasksDiv li:focus { background: #e0d1be !important; outline: none; }
@@ -75,8 +75,8 @@ html, body { margin: 0; padding: 0; min-height: 100%; background: white; color: 
 #tasksDiv li span:focus { cursor: text; background: white; border-color: #bbb; min-width: 500px; color: black; }
 #tasksDiv li i { font-size: 0.8em; color: rgba(0, 0, 0, 0.5); display: inline-block; background: #00968820; padding: 5px; font-style: normal; border-radius: 5px; vertical-align: middle; margin-left: 5px; }
 #tasksDiv h3 { font-size: 1.0em; margin: 15px 0 5px; padding: 7px; transition: background-color 0.1s; }
-#tasksDiv h3.Done, #tasksDiv h3.Archived { color: #666; }
-#tasksDiv h3.Cancelled { color: #999; }
+#tasksDiv h3.done { color: #666; }
+#tasksDiv h3.cancelled { color: #999; }
 #tasksDiv h3:hover { background: #e2e2e2; }
 #tasksDiv h3::after { display: inline-block; margin-left: 5px; font-size: 9px; content: '▼'; line-height: 18px; border: 1px solid #999; color: #666; text-align: center; border-radius: 12px; width: 20px; height: 20px; box-sizing: border-box; vertical-align: middle; }
 #tasksDiv h3.expanded::after { content: '▲'; }
