--- a/scss/hanging-todo.scss
+++ b/scss/hanging-todo.scss
@@ -27,6 +27,7 @@ html, body {
 	min-height: 100%;
 	background: white;
 	color: black;
+	@include noSelect;
 }
 
 #loaderDiv {
@@ -320,7 +321,7 @@ html, body {
 		margin: 0;
 		padding: 0;
 
-		&.Done, &.Archived {
+		&.done {
 			li {
 				color: #00000066;
 				background: #f9f9f9;
@@ -331,7 +332,7 @@ html, body {
 				}
 			}
 		}
-		&.Cancelled {
+		&.cancelled {
 			li {
 				color: #00000055;
 				background: #fafafa;
@@ -411,10 +412,10 @@ html, body {
 		padding: 7px;
 		transition: background-color 0.1s;
 
-		&.Done, &.Archived {
+		&.done {
 			color: #666;
 		}
-		&.Cancelled {
+		&.cancelled {
 			color: #999;
 		}
 
