--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -31,13 +31,14 @@ html, body { margin: 0; padding: 0; min-height: 100%; background: white; color: 
 #workstationSelectionDiv input { width: calc(100% - 10px); box-sizing: border-box; padding: 5px; margin: 5px; }
 
 #workstationContextMenu, #boardContextMenu, #taskContextMenu, #userMenu, #statusContextMenu { background: #eee; padding: 5px; position: fixed; min-width: 200px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); z-index: 100; }
-#workstationContextMenu button, #workstationContextMenu label, #boardContextMenu button, #boardContextMenu label, #taskContextMenu button, #taskContextMenu label, #userMenu button, #userMenu label, #statusContextMenu button, #statusContextMenu label { display: block; width: 100%; background: none; border: none; padding: 8px; text-align: left; padding-left: 25px; border-radius: unset; transition: background-color 0.1s, color 0.1s; box-sizing: border-box; }
+#workstationContextMenu button, #workstationContextMenu label, #boardContextMenu button, #boardContextMenu label, #taskContextMenu button, #taskContextMenu label, #userMenu button, #userMenu label, #statusContextMenu button, #statusContextMenu label { display: block; width: 100%; background: none; border: none; padding: 8px; text-align: left; padding-left: 25px; border-radius: unset; transition: background-color 0.1s, color 0.1s; box-sizing: border-box; color: black; }
 #workstationContextMenu button:hover, #workstationContextMenu button:focus, #workstationContextMenu label:hover, #workstationContextMenu label:focus, #boardContextMenu button:hover, #boardContextMenu button:focus, #boardContextMenu label:hover, #boardContextMenu label:focus, #taskContextMenu button:hover, #taskContextMenu button:focus, #taskContextMenu label:hover, #taskContextMenu label:focus, #userMenu button:hover, #userMenu button:focus, #userMenu label:hover, #userMenu label:focus, #statusContextMenu button:hover, #statusContextMenu button:focus, #statusContextMenu label:hover, #statusContextMenu label:focus { background: #009688; color: white; }
 #workstationContextMenu button.selected, #workstationContextMenu label.selected, #boardContextMenu button.selected, #boardContextMenu label.selected, #taskContextMenu button.selected, #taskContextMenu label.selected, #userMenu button.selected, #userMenu label.selected, #statusContextMenu button.selected, #statusContextMenu label.selected { background: #ddd; /*color: white;*/ position: relative; color: black; /*&:hover::before {
 	background: white;
 }*/ }
 #workstationContextMenu button.selected::before, #workstationContextMenu label.selected::before, #boardContextMenu button.selected::before, #boardContextMenu label.selected::before, #taskContextMenu button.selected::before, #taskContextMenu label.selected::before, #userMenu button.selected::before, #userMenu label.selected::before, #statusContextMenu button.selected::before, #statusContextMenu label.selected::before { position: absolute; left: 10px; top: 12px; content: ' '; /*border: 1px solid black;*/ background: black; width: 6px; height: 6px; border-radius: 8px; }
-#workstationContextMenu button.delete:hover, #workstationContextMenu label.delete:hover, #boardContextMenu button.delete:hover, #boardContextMenu label.delete:hover, #taskContextMenu button.delete:hover, #taskContextMenu label.delete:hover, #userMenu button.delete:hover, #userMenu label.delete:hover, #statusContextMenu button.delete:hover, #statusContextMenu label.delete:hover { background: #BF3C25; }
+#workstationContextMenu button.delete, #workstationContextMenu label.delete, #boardContextMenu button.delete, #boardContextMenu label.delete, #taskContextMenu button.delete, #taskContextMenu label.delete, #userMenu button.delete, #userMenu label.delete, #statusContextMenu button.delete, #statusContextMenu label.delete { color: #BF3C25; }
+#workstationContextMenu button.delete:hover, #workstationContextMenu label.delete:hover, #boardContextMenu button.delete:hover, #boardContextMenu label.delete:hover, #taskContextMenu button.delete:hover, #taskContextMenu label.delete:hover, #userMenu button.delete:hover, #userMenu label.delete:hover, #statusContextMenu button.delete:hover, #statusContextMenu label.delete:hover { color: white; background: #BF3C25; }
 #workstationContextMenu button[hidden], #workstationContextMenu label[hidden], #boardContextMenu button[hidden], #boardContextMenu label[hidden], #taskContextMenu button[hidden], #taskContextMenu label[hidden], #userMenu button[hidden], #userMenu label[hidden], #statusContextMenu button[hidden], #statusContextMenu label[hidden] { display: none; }
 #workstationContextMenu input[type=checkbox], #boardContextMenu input[type=checkbox], #taskContextMenu input[type=checkbox], #userMenu input[type=checkbox], #statusContextMenu input[type=checkbox] { position: absolute; left: 8px; }
 #workstationContextMenu h4, #boardContextMenu h4, #taskContextMenu h4, #userMenu h4, #statusContextMenu h4 { margin: 5px 5px; padding: 0; font-size: 11px; font-weight: normal; color: #999; }
@@ -70,7 +71,8 @@ html, body { margin: 0; padding: 0; min-height: 100%; background: white; color: 
 #tasksDiv li:focus { background: #e0d1be !important; outline: none; }
 #tasksDiv li.selected { background: #bee0dd !important; outline: none; }
 #tasksDiv li button { width: 32px; height: 32px; margin-right: 2px; color: transparent; border-color: #00000066; }
-#tasksDiv li button:hover, #tasksDiv li button:focus { color: white !important; border-color: #009688; }
+#tasksDiv li button:focus { color: #009688; border-color: #009688; }
+#tasksDiv li button:hover { color: white !important; border-color: #009688; }
 #tasksDiv li span { display: inline-block; padding: 7px; border: 1px solid transparent; -moz-user-select: text; -webkit-user-select: text; -ms-user-select: element; user-select: text; user-select: contain; }
 #tasksDiv li span:focus { cursor: text; background: white; border-color: #bbb; min-width: 500px; color: black; }
 #tasksDiv li i { font-size: 0.8em; color: rgba(0, 0, 0, 0.5); display: inline-block; background: #00968820; padding: 5px; font-style: normal; border-radius: 5px; vertical-align: middle; margin-left: 5px; }
@@ -91,7 +93,8 @@ hr { margin: 5px 0; border: none; border-top: 1px solid #bbb; }
 
 button, .buttons li { border: 1px solid #666; padding: 5px 7px; border-radius: 5px; color: #666; background: none; transition: background-color 0.1s, color 0.1s; }
 button.default, .buttons li.default { border-color: #009688; color: #009688; }
-button:hover, button:focus, .buttons li:hover, .buttons li:focus { background: #009688; color: white; border-color: #009688; }
+button:focus, .buttons li:focus { color: #009688; border-color: #009688; }
+button:hover, .buttons li:hover { background: #009688; color: white; border-color: #009688; }
 button.delete, .buttons li.delete { border-color: #BF3C25 !important; }
 button.delete:hover, .buttons li.delete:hover { background-color: #BF3C25 !important; }
 
@@ -133,8 +136,9 @@ input[type=checkbox] { min-width: unset; }
 #statusEdit > div { background: white; border-radius: 15px; padding: 35px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); margin: auto; }
 #statusEdit .radios { margin: 0 10px; display: inline-block; }
 #statusEdit .radios.hidden { visibility: hidden; }
-#statusEdit .drag { padding: 0; border: 1px solid #666; width: 32px; height: 32px; box-sizing: border-box; vertical-align: middle; margin: 0 10px 0 0; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; cursor: move; text-align: center; line-height: 32px; }
-#statusEdit .drag.disabled { cursor: default; border: none; visibility: hidden; }
+#statusEdit .drag { padding: 0; background: #ddd; width: 32px; height: 32px; box-sizing: border-box; vertical-align: middle; margin: 0 10px 0 0; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; cursor: move; text-align: center; line-height: 32px; border-radius: 5px; }
+#statusEdit .drag:hover { background-color: #ccc; }
+#statusEdit .drag.disabled { cursor: default; visibility: hidden; }
 #statusEdit ul { margin-bottom: 10px; }
 #statusEdit button { border-radius: 10px; padding: 15px 20px; }
 #statusEdit li.dragging { opacity: 0.5; }
