--- a/scss/hanging-todo.scss
+++ b/scss/hanging-todo.scss
@@ -183,6 +183,7 @@ html, body {
 		border-radius: unset;
 		transition: background-color 0.1s, color 0.1s;
 		box-sizing: border-box;
+		color: black;
 
 		&:hover, &:focus {
 			background: $actionColor;
@@ -212,8 +213,13 @@ html, body {
 			}*/
 		}
 
-		&.delete:hover {
-			background: $deleteColor;
+		&.delete {
+			color: $deleteColor;
+
+			&:hover {
+				color: white;
+				background: $deleteColor;
+			}
 		}
 
 		&[hidden] {
@@ -372,7 +378,12 @@ html, body {
 			color: transparent;
 			border-color: #00000066;
 
-			&:hover, &:focus {
+			&:focus {
+				color: $actionColor;
+				border-color: $actionColor;
+			}
+
+			&:hover {
 				color: white !important;
 				border-color: $actionColor;
 			}
@@ -478,7 +489,12 @@ button, .buttons li {
 		color: $actionColor;
 	}
 
-	&:hover, &:focus {
+	&:focus {
+		color: $actionColor;
+		border-color: $actionColor;
+	}
+
+	&:hover {
 		background: $actionColor;
 		color: white;
 		border-color: $actionColor;
@@ -681,23 +697,24 @@ input[type=checkbox] {
 
 	.drag {
 		padding: 0;
-		border: 1px solid #666;
+		background: #ddd;
 		width: 32px;
 		height: 32px;
 		box-sizing: border-box;
 		vertical-align: middle;
 		margin: 0 10px 0 0;
-		-moz-user-select: none;
-		-webkit-user-select: none;
-		-ms-user-select: none;
-		user-select: none;
+		@include noSelect;
 		cursor: move;
 		text-align: center;
 		line-height: 32px;
+		border-radius: 5px;
+
+		&:hover {
+			background-color: #ccc;
+		}
 
 		&.disabled {
 			cursor: default;
-			border: none;
 			visibility: hidden;
 		}
 	}
