--- a/scss/hanging-todo.scss
+++ b/scss/hanging-todo.scss
@@ -467,13 +467,15 @@ html, body {
 }
 
 #tasksDiv.kanban {
-
 	& > div {
 		white-space: nowrap;
 	}
+}
+
+#tasksDiv.kanban, #tasksDiv.hybrid {
 
 	section {
-		width: 250px;
+		width: 247px;
 		display: inline-block;
 		vertical-align: top;
 		background: #e8e8e8;
@@ -512,11 +514,20 @@ html, body {
 		}
 	}
 	h3 {
-		margin-top: 0;
+		margin: 0;
 		border-radius: 10px;
+		position: -webkit-sticky;
+		position: sticky;
+		top: 0;
+		z-index: 10;
+		background: #e8e8e8cc;
 
 		&.default {
 			display: block;
+		}
+
+		&:hover {
+			background: #e2e2e2;
 		}
 	}
 }
